--- a/app/components/search.css
+++ b/app/components/search.css
@@ -1,12 +1,12 @@
 #search {
 	min-width: 320px;
-    max-width: 640px;
+    max-width: 100%;
 	width: 100%;
 	height: 45px;
 	box-sizing: border-box;
 	padding: 5px 20px;
 	z-index: 10;
-	// background-color: rgba(234, 44, 44, 0.81);
+	/* background-color: rgba(234, 44, 44, 0.81);*/
 	background-color: rgba(234, 44, 44, 0);
 	opacity: 1;
 }
